--- a/lsorge_Activity12_login.html
+++ b/lsorge_Activity12_login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="07_2_31_Challenge_fetchuser_login_Async_Await.css">
+  <link rel="stylesheet" href="lsorge_Activity12_login.css">
   <title>Authentication</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     </form>
     <div id="loginuser"></div>
   </div>
-  <script src="./07_2_31_Challenge_fetchuser_login_Async_Await.js"></script>
+  <script src="./lsorge_Activity12_login.js"></script>
 </body>
 </html>
 
